Fix test queue card word wrap in Safari (#4990)

--- a/frontend/src/app/testQueue/TestQueue.scss
+++ b/frontend/src/app/testQueue/TestQueue.scss
@@ -1,3 +1,7 @@
 .grid-container.queue-container-wide {
   max-width: 1200px;
 }
+
+.usa-radio {
+  white-space: nowrap;
+}
